# huffman-archive-cpp

./: .gitignore  CMakeLists.txt
include/: archive.hpp  base_types.hpp  binary_map.hpp  huffman.hpp
src/: binary_map.cpp  decode.cpp  encode.cpp  huffman.cpp  main.cpp
